# temp

Backend Dotnet API/: .gitignore  Dockerfile  GemelliAPI.sln  (+4 more)
Backend Python API/: .dockerignore  .gitignore  Dockerfile  README.md  STRUCTURE.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
Backend Python API/src/: main.py
Backend Python API/src/api/: chat_router.py  docsort_router.py  document_router.py  file_router.py
Backend Python API/src/application/: chat_history_service.py  chat_service.py  chat_title_service.py  docsort_service.py  document_service.py  ocr_service.py  pdf_service.py
Backend Python API/src/application/agents/: agent_graph.py  basic_agent.py  chat_title_llm.py  people_agent.py
Backend Python API/src/domain/: agent_prompts.py  chat.py  docsort.py  document.py  extract_text_schema.py  file.py  file_summary.py  pdf.py  qdrant_insert_schema.py  states.py  usage_schema.py
Backend Python API/src/infrastructure/: advanced_ocr_processor.py  checkpointer.py  simple_usage_callback.py  usage_callback.py
Backend Python API/src/infrastructure/auth/: verify_token.py
Backend Python API/src/infrastructure/configs/: config.py
Backend Python API/src/infrastructure/qdrant/: chunck_qdrant.py  chunck_text.py  document_processor.py  embedding_service.py  extract_camelot.py  extract_text.py  naming.py  parse_qdrant_data.py  preferences_agent.py  qdrant_repository.py  qdrant_service.py  smart_document_extractor.py  text_refiner.py
Backend Python API/tests/: conftest.py
Backend Python API/tests/api/: test_file_router.py
(+227 files in other folders)
