[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemelli-ai"
version = "0.1.0"
description = "GemelliAI - AI Assistant with RAG capabilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Add your dependencies here from requirements.txt
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."